# sparse-ood-generalization

./: .gitignore  README.md  pyproject.toml
data/box_world/: balanced_1000.pl  balanced_10000.pl  balanced_2000.pl  balanced_500.pl  balanced_5000.pl  balanced_dist_1000.pl  balanced_dist_2000.pl  balanced_dist_500.pl  balanced_dist_5000.pl  boxworld_v2_test_col_pairs2.pl  boxworld_v2_test_col_pairs3.pl  boxworld_v2_test_comb_pairs2.pl  boxworld_v2_test_comb_pairs3.pl  boxworld_v2_test_dist_pairs2.pl  boxworld_v2_test_dist_pairs3.pl  boxworld_v2_test_id_pairs2.pl  boxworld_v2_test_id_pairs3.pl  boxworld_v2_test_pair_pairs2.pl  boxworld_v2_test_pair_pairs3.pl  boxworld_v2_train_10000_pairs2.pl  boxworld_v2_train_1000_pairs2.pl  boxworld_v2_train_1000_pairs3.pl  boxworld_v2_train_2000_pairs2.pl  boxworld_v2_train_2000_pairs3.pl  boxworld_v2_train_5000_pairs2.pl  boxworld_v2_train_5000_pairs3.pl  boxworld_v2_train_500_pairs2.pl  boxworld_v2_train_500_pairs3.pl  boxworld_v2_val_col_pairs2.pl  boxworld_v2_val_col_pairs3.pl  boxworld_v2_val_comb_pairs2.pl  boxworld_v2_val_comb_pairs3.pl  boxworld_v2_val_dist_pairs2.pl  boxworld_v2_val_dist_pairs3.pl  boxworld_v2_val_id_pairs2.pl  boxworld_v2_val_id_pairs3.pl  boxworld_v2_val_pair_pairs2.pl  boxworld_v2_val_pair_pairs3.pl
data/shapes/: grid_labels_test.npy  grid_labels_test_a.npy  grid_labels_test_b.npy  grid_labels_train.npy  grid_tensors_test.npy  shapes_test.pl  (+28 more)
notebooks/: box_world_test.ipynb  data_generation.ipynb  generate_data.ipynb  gradient_checks.ipynb  interpret_model.ipynb  oracle_mha.ipynb  saliency_check.ipynb
(+181 files in other folders)
